librocksdb_sys/src/lib.rs

// Copyright 2014 Tyler Neely
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

extern crate libc;
#[cfg(test)]
extern crate tempdir;

use libc::{c_char, c_uchar, c_int, c_void, size_t, uint64_t};
use std::ffi::CStr;

pub enum DBOptions {}
pub enum DBInstance {}
pub enum DBWriteOptions {}
pub enum DBReadOptions {}
pub enum DBMergeOperator {}
pub enum DBBlockBasedTableOptions {}
pub enum DBCache {}
pub enum DBFilterPolicy {}
pub enum DBSnapshot {}
pub enum DBIterator {}
pub enum DBCFHandle {}
pub enum DBWriteBatch {}
pub enum DBComparator {}
pub enum DBFlushOptions {}
pub enum DBCompactionFilter {}
pub enum DBRateLimiter {}

pub fn new_bloom_filter(bits: c_int) -> *mut DBFilterPolicy {
    unsafe { rocksdb_filterpolicy_create_bloom(bits) }
}

pub fn new_cache(capacity: size_t) -> *mut DBCache {
    unsafe { rocksdb_cache_create_lru(capacity) }
}

#[derive(Copy, Clone)]
#[repr(C)]
pub enum DBCompressionType {
    DBNo = 0,
    DBSnappy = 1,
    DBZlib = 2,
    DBBz2 = 3,
    DBLz4 = 4,
    DBLz4hc = 5,
}

#[repr(C)]
pub enum DBCompactionStyle {
    DBLevel = 0,
    DBUniversal = 1,
    DBFifo = 2,
}

#[repr(C)]
pub enum DBUniversalCompactionStyle {
    rocksdb_similar_size_compaction_stop_style = 0,
    rocksdb_total_size_compaction_stop_style = 1,
}

#[derive(Copy, Clone, PartialEq)]
#[repr(C)]
pub enum DBRecoveryMode {
    TolerateCorruptedTailRecords = 0,
    AbsoluteConsistency = 1,
    PointInTime = 2,
    SkipAnyCorruptedRecords = 3,
}

pub fn error_message(ptr: *mut c_char) -> String {
    let c_str = unsafe { CStr::from_ptr(ptr) };
    let s = format!("{}", c_str.to_string_lossy());
    unsafe {
        libc::free(ptr as *mut c_void);
    }
    s
}

#[macro_export]
macro_rules! ffi_try {
    ($func:ident($($arg:expr),*)) => ({
        use std::ptr;
        let mut err = ptr::null_mut();
        let res = $crate::$func($($arg),*, &mut err);
        if !err.is_null() {
            return Err($crate::error_message(err));
        }
        res
    })
}

// TODO audit the use of boolean arguments, b/c I think they need to be u8
// instead...
#[link(name = "rocksdb")]
extern "C" {
    pub fn rocksdb_options_create() -> *mut DBOptions;
    pub fn rocksdb_options_destroy(opts: *mut DBOptions);
    pub fn rocksdb_cache_create_lru(capacity: size_t) -> *mut DBCache;
    pub fn rocksdb_cache_destroy(cache: *mut DBCache);
    pub fn rocksdb_block_based_options_create() -> *mut DBBlockBasedTableOptions;
    pub fn rocksdb_block_based_options_destroy(opts: *mut DBBlockBasedTableOptions);
    pub fn rocksdb_block_based_options_set_block_size(
        block_options: *mut DBBlockBasedTableOptions,
        block_size: size_t);
    pub fn rocksdb_block_based_options_set_block_size_deviation(
        block_options: *mut DBBlockBasedTableOptions,
        block_size_deviation: c_int);
    pub fn rocksdb_block_based_options_set_block_restart_interval(
        block_options: *mut DBBlockBasedTableOptions,
        block_restart_interval: c_int);
    pub fn rocksdb_block_based_options_set_cache_index_and_filter_blocks(
        block_options: *mut DBBlockBasedTableOptions, v: c_uchar);
    pub fn rocksdb_block_based_options_set_filter_policy(
        block_options: *mut DBBlockBasedTableOptions,
        filter_policy: *mut DBFilterPolicy);
    pub fn rocksdb_block_based_options_set_no_block_cache(
        block_options: *mut DBBlockBasedTableOptions, no_block_cache: bool);
    pub fn rocksdb_block_based_options_set_block_cache(
        block_options: *mut DBBlockBasedTableOptions, block_cache: *mut DBCache);
    pub fn rocksdb_block_based_options_set_block_cache_compressed(
        block_options: *mut DBBlockBasedTableOptions,
        block_cache_compressed: *mut DBCache);
    pub fn rocksdb_block_based_options_set_whole_key_filtering(
        ck_options: *mut DBBlockBasedTableOptions, doit: bool);
    pub fn rocksdb_options_set_block_based_table_factory(
        options: *mut DBOptions,
        block_options: *mut DBBlockBasedTableOptions);
    pub fn rocksdb_options_increase_parallelism(options: *mut DBOptions, threads: c_int);
    pub fn rocksdb_options_optimize_level_style_compaction(options: *mut DBOptions,
                                                           memtable_memory_budget: c_int);
    pub fn rocksdb_options_set_compaction_filter(options: *mut DBOptions,
                                                 filter: *mut DBCompactionFilter);
    pub fn rocksdb_options_set_create_if_missing(options: *mut DBOptions, v: bool);
    pub fn rocksdb_options_set_max_open_files(options: *mut DBOptions, files: c_int);
    pub fn rocksdb_options_set_use_fsync(options: *mut DBOptions, v: c_int);
    pub fn rocksdb_options_set_bytes_per_sync(options: *mut DBOptions, bytes: u64);
    pub fn rocksdb_options_set_disable_data_sync(options: *mut DBOptions, v: c_int);
    pub fn rocksdb_options_set_allow_os_buffer(options: *mut DBOptions, is_allow: bool);
    pub fn rocksdb_options_optimize_for_point_lookup(options: *mut DBOptions,
                                                     block_cache_size_mb: u64);
    pub fn rocksdb_options_set_table_cache_numshardbits(options: *mut DBOptions, bits: c_int);
    pub fn rocksdb_options_set_max_write_buffer_number(options: *mut DBOptions, bufno: c_int);
    pub fn rocksdb_options_set_min_write_buffer_number_to_merge(options: *mut DBOptions,
                                                                bufno: c_int);
    pub fn rocksdb_options_set_level0_file_num_compaction_trigger(options: *mut DBOptions,
                                                                  no: c_int);
    pub fn rocksdb_options_set_level0_slowdown_writes_trigger(options: *mut DBOptions, no: c_int);
    pub fn rocksdb_options_set_level0_stop_writes_trigger(options: *mut DBOptions, no: c_int);
    pub fn rocksdb_options_set_write_buffer_size(options: *mut DBOptions, bytes: u64);
    pub fn rocksdb_options_set_target_file_size_base(options: *mut DBOptions, bytes: u64);
    pub fn rocksdb_options_set_target_file_size_multiplier(options: *mut DBOptions, mul: c_int);
    pub fn rocksdb_options_set_max_bytes_for_level_base(options: *mut DBOptions, bytes: u64);
    pub fn rocksdb_options_set_max_bytes_for_level_multiplier(options: *mut DBOptions,
                                                              mul: c_int);
    pub fn rocksdb_options_set_max_log_file_size(options: *mut DBOptions, bytes: u64);
    pub fn rocksdb_options_set_max_manifest_file_size(options: *mut DBOptions, bytes: u64);
    pub fn rocksdb_options_set_hash_skip_list_rep(options: *mut DBOptions,
                                                  bytes: u64,
                                                  a1: i32,
                                                  a2: i32);
    pub fn rocksdb_options_set_compaction_style(options: *mut DBOptions, cs: DBCompactionStyle);
    pub fn rocksdb_options_set_compression(options: *mut DBOptions,
                                           compression_style_no: DBCompressionType);
    pub fn rocksdb_options_set_compression_per_level(options: *mut DBOptions,
                                                     level_values: *const DBCompressionType,
                                                     num_levels: size_t);
    pub fn rocksdb_options_set_max_background_compactions(options: *mut DBOptions,
                                                          max_bg_compactions: c_int);
    pub fn rocksdb_options_set_max_background_flushes(options: *mut DBOptions,
                                                      max_bg_flushes: c_int);
    pub fn rocksdb_options_set_filter_deletes(options: *mut DBOptions, v: bool);
    pub fn rocksdb_options_set_disable_auto_compactions(options: *mut DBOptions, v: c_int);
    pub fn rocksdb_options_set_report_bg_io_stats(options: *mut DBOptions, v: c_int);
    pub fn rocksdb_options_set_wal_recovery_mode(options: *mut DBOptions, mode: DBRecoveryMode);
    pub fn rocksdb_options_enable_statistics(options: *mut DBOptions);
    pub fn rocksdb_options_statistics_get_string(options: *mut DBOptions) -> *const c_char;
    pub fn rocksdb_options_set_stats_dump_period_sec(options: *mut DBOptions, v: usize);
    pub fn rocksdb_options_set_num_levels(options: *mut DBOptions, v: c_int);
    pub fn rocksdb_options_set_ratelimiter(options: *mut DBOptions, limiter: *mut DBRateLimiter);
    pub fn rocksdb_ratelimiter_create(rate_bytes_per_sec: i64,
                                      refill_period_us: i64,
                                      fairness: i32)
                                      -> *mut DBRateLimiter;
    pub fn rocksdb_ratelimiter_destroy(limiter: *mut DBRateLimiter);
    pub fn rocksdb_filterpolicy_create_bloom_full(bits_per_key: c_int) -> *mut DBFilterPolicy;
    pub fn rocksdb_filterpolicy_create_bloom(bits_per_key: c_int) -> *mut DBFilterPolicy;
    pub fn rocksdb_open(options: *mut DBOptions,
                        path: *const c_char,
                        err: *mut *mut c_char)
                        -> *mut DBInstance;
    pub fn rocksdb_writeoptions_create() -> *mut DBWriteOptions;
    pub fn rocksdb_writeoptions_destroy(writeopts: *mut DBWriteOptions);
    pub fn rocksdb_writeoptions_set_sync(writeopts: *mut DBWriteOptions, v: bool);
    pub fn rocksdb_writeoptions_disable_WAL(writeopts: *mut DBWriteOptions, v: c_int);
    pub fn rocksdb_put(db: *mut DBInstance,
                       writeopts: *mut DBWriteOptions,
                       k: *const u8,
                       kLen: size_t,
                       v: *const u8,
                       vLen: size_t,
                       err: *mut *mut c_char);
    pub fn rocksdb_put_cf(db: *mut DBInstance,
                          writeopts: *mut DBWriteOptions,
                          cf: *mut DBCFHandle,
                          k: *const u8,
                          kLen: size_t,
                          v: *const u8,
                          vLen: size_t,
                          err: *mut *mut c_char);
    pub fn rocksdb_readoptions_create() -> *mut DBReadOptions;
    pub fn rocksdb_readoptions_destroy(readopts: *mut DBReadOptions);
    pub fn rocksdb_readoptions_set_verify_checksums(readopts: *mut DBReadOptions, v: bool);
    pub fn rocksdb_readoptions_set_fill_cache(readopts: *mut DBReadOptions, v: bool);
    pub fn rocksdb_readoptions_set_snapshot(readopts: *mut DBReadOptions,
                                            snapshot: *const DBSnapshot);
    pub fn rocksdb_readoptions_set_iterate_upper_bound(readopts: *mut DBReadOptions,
                                                       k: *const u8,
                                                       kLen: size_t);
    pub fn rocksdb_readoptions_set_read_tier(readopts: *mut DBReadOptions, tier: c_int);
    pub fn rocksdb_readoptions_set_tailing(readopts: *mut DBReadOptions, v: bool);
